Fixes some paths and tests

--- a/app/views/enumerations/edit.rhtml
+++ b/app/views/enumerations/edit.rhtml
@@ -1,10 +1,10 @@
 <h2><%=l(:label_enumerations)%></h2>
 
-<% form_tag({:action => 'update', :id => @enumeration}, :method => :put, :class => "tabular") do %>
+<% form_tag(enumeration_path(@enumeration), :method => :put, :class => "tabular") do %>
   <%= render :partial => 'form' %>
   <%= submit_tag l(:button_save) %>
 <% end %>
 
-<% form_tag({:action => 'destroy', :id => @enumeration}) do %>
+<% form_tag(enumeration_path(@enumeration), :method => :delete) do %>
   <%= submit_tag l(:button_delete) %>
 <% end %>
