--- a/app/views/enumerations/new.rhtml
+++ b/app/views/enumerations/new.rhtml
@@ -1,6 +1,6 @@
 <h2><%= l(@enumeration.option_name) %>: <%=l(:label_enumeration_new)%></h2>
 
-<% form_tag({:action => 'create'}, :class => "tabular") do %>
+<% form_tag(enumerations_path, :class => "tabular") do %>
   <%= render :partial => 'form' %>
   <%= submit_tag l(:button_create) %>
 <% end %>
