--- a/app/views/queries/index.rhtml
+++ b/app/views/queries/index.rhtml
@@ -17,7 +17,7 @@
         <small>
         <% if query.editable_by?(User.current) %>    
         <%= link_to l(:button_edit), {:controller => 'queries', :action => 'edit', :id => query}, :class => 'icon icon-edit' %>
-        <%= link_to l(:button_delete), {:controller => 'queries', :action => 'destroy', :id => query}, :confirm => l(:text_are_you_sure), :method => :post, :class => 'icon icon-del' %>
+        <%= link_to l(:button_delete), {:controller => 'queries', :action => 'destroy', :id => query}, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %>
         </small>
       <% end %>
       </td>
