--- a/app/views/issues/context_menu.rhtml
+++ b/app/views/issues/context_menu.rhtml
@@ -75,7 +75,7 @@
 	</li>
 	
 <% if !@issue.nil? %>
-	<li><%= context_menu_link l(:button_copy), new_project_issues_path(@project, :project_id => @project, :copy_from => @issue),
+	<li><%= context_menu_link l(:button_copy), new_project_issue_path(@project, :project_id => @project, :copy_from => @issue),
 	        :class => 'icon-copy', :disabled => !@can[:copy] %></li>
 	<% if @can[:log_time] -%>
 	<li><%= context_menu_link l(:button_log_time), edit_project_timelogs_path(@project, :issue_id => @issue),
