--- a/app/views/projects/settings/_issue_categories.rhtml
+++ b/app/views/projects/settings/_issue_categories.rhtml
@@ -13,7 +13,7 @@
     <td><%=h(category.name) %></td>
     <td><%=h(category.assigned_to.name) if category.assigned_to %></td>
     <td align="center"><%= link_to_if_authorized l(:button_edit), { :controller => 'issue_categories', :action => 'edit', :id => category }, :class => 'icon icon-edit' %></td>
-    <td align="center"><%= link_to_if_authorized l(:button_delete), {:controller => 'issue_categories', :action => 'destroy', :id => category}, :method => :post, :class => 'icon icon-del' %></td>
+    <td align="center"><%= link_to_if_authorized l(:button_delete), {:controller => 'issue_categories', :action => 'destroy', :id => category}, :method => :delete, :class => 'icon icon-del' %></td>
 	</tr>
 	<% end %>
 <% end %>
