--- a/app/views/versions/edit.rhtml
+++ b/app/views/versions/edit.rhtml
@@ -1,6 +1,6 @@
 <h2><%=l(:label_version)%></h2>
 
-<% labelled_tabular_form_for :version, @version, :url => { :action => 'edit' } do |f| %>
+<% labelled_tabular_form_for :version, @version, :url => version_path(@version), :method => :put  do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
 <% end %>
