--- a/app/views/settings/_issues.rhtml
+++ b/app/views/settings/_issues.rhtml
@@ -1,4 +1,4 @@
-<% form_tag(modify_settings_path(:tab => 'issues')) do %>
+<% form_tag(settings_path(:tab => 'issues'), :method => :put) do %>
 
 <div class="box tabular settings">
 <p><label><%= l(:setting_cross_project_issue_relations) %></label>
