--- a/app/views/settings/_mail_handler.rhtml
+++ b/app/views/settings/_mail_handler.rhtml
@@ -1,4 +1,4 @@
-<% form_tag(modify_settings_path(:tab => 'mail_handler')) do %>
+<% form_tag(settings_path(:tab => 'mail_handler'), :method => :put) do %>
 
 <div class="box tabular settings">
 <p><label><%= l(:setting_mail_handler_api_enabled) %></label>
