--- a/app/views/settings/_projects.rhtml
+++ b/app/views/settings/_projects.rhtml
@@ -1,4 +1,4 @@
-<% form_tag(modify_settings_path(:tab => 'projects')) do %>
+<% form_tag(settings_path(:tab => 'projects'), :method => :put) do %>
 
 <div class="box tabular settings">
 <p><label><%= l(:setting_default_projects_public) %></label>
