--- a/app/views/projects/settings/_members.rhtml
+++ b/app/views/projects/settings/_members.rhtml
@@ -41,7 +41,7 @@
 <% end %>
 
 <% if authorize_for('members', 'new') && !users.empty? %>
-  <% remote_form_for(@member) do |f| %>
+  <% remote_form_for([@project, @member]) do |f| %>
     <p><label for="member_user_id"><%=l(:label_member_new)%></label><br />
     <%= f.select :user_id, users.collect{|user| [user.name, user.id]} %>
     <%= l(:label_role) %>: <%= f.select :role_id, roles.collect{|role| [role.name, role.id]}, :selected => nil %>
