Revert project_destroy

--- a/app/views/admin/projects.rhtml
+++ b/app/views/admin/projects.rhtml
@@ -38,7 +38,7 @@
     </small>
   </td>
   <td align="center" style="width:10%">
-    <small><%= link_to(l(:button_delete), { :controller => 'projects', :action => 'destroy_project', :id => project }, :class => 'icon icon-del') %></small>
+    <small><%= link_to(l(:button_delete), { :controller => 'projects', :action => 'destroy', :id => project }, :class => 'icon icon-del') %></small>
   </td>
   </tr>
 <% end %>
