--- a/app/views/issues/show.rhtml
+++ b/app/views/issues/show.rhtml
@@ -70,7 +70,7 @@ end %>
 <%= link_to_attachments @issue.attachments, :delete_url => (authorize_for('issues', 'destroy_attachment') ? {:controller => 'issues', :action => 'destroy_attachment', :id => @issue, :method => :delete} : nil) %>
 <% end %>
 
-<% if authorize_for('issue_relations', 'new') || @issue.relations.any? %>
+<% if authorize_for('issue_relations', 'create') || @issue.relations.any? %>
 <hr />
 <div id="relations">
 <%= render :partial => 'relations' %>
