--- a/app/views/issues/_relations.rhtml
+++ b/app/views/issues/_relations.rhtml
@@ -1,6 +1,6 @@
 <div class="contextual">
-<% if authorize_for('issue_relations', 'new') %>
-    <%= toggle_link l(:button_add), 'new-relation-form'%>
+<% if authorize_for('issue_relations', 'create') %>
+    <%= toggle_link l(:button_add), 'create-relation-form'%>
 <% end %>
 </div>
 
@@ -16,7 +16,7 @@
 <td><%= format_date(relation.other_issue(@issue).start_date) %></td>
 <td><%= format_date(relation.other_issue(@issue).due_date) %></td>
 <td><%= link_to_remote(image_tag('delete.png'), { :url => {:controller => 'issue_relations', :action => 'destroy', :issue_id => @issue, :id => relation},                                              
-                                                  :method => :post
+                                                  :method => :delete
                                                 }, :title => l(:label_relation_delete)) if authorize_for('issue_relations', 'destroy') %></td>
 </tr>
 <% end %>
@@ -24,8 +24,8 @@
 <% end %>
 
 <% remote_form_for(:relation, @relation, 
-                 :url => {:controller => 'issue_relations', :action => 'new', :issue_id => @issue},
+                 :url => {:controller => 'issue_relations', :action => 'create', :issue_id => @issue},
                  :method => :post,
-                 :html => {:id => 'new-relation-form', :style => (@relation ? '' : 'display: none;')}) do |f| %>
+                 :html => {:id => 'create-relation-form', :style => (@relation ? '' : 'display: none;')}) do |f| %>
 <%= render :partial => 'issue_relations/form', :locals => {:f => f}%>
 <% end %>
