--- a/app/views/watchers/_watchers.rhtml
+++ b/app/views/watchers/_watchers.rhtml
@@ -3,7 +3,7 @@
                    :url => {:controller => 'watchers',
                             :action => 'new',
                             :object_type => watched.class.name.underscore,
-                            :object_id => watched} if User.current.allowed_to?(:add_issue_watchers, @project) %>
+                            :object_id => watched}, :method => :get if User.current.allowed_to?(:add_issue_watchers, @project) %>
 </div>
 
 <p><strong><%= l(:label_issue_watchers) %></strong></p>
@@ -12,7 +12,7 @@
 <% unless @watcher.nil? %>
 <% remote_form_for(:watcher, @watcher, 
                    :url => {:controller => 'watchers',
-                            :action => 'new',
+                            :action => 'create',
                             :object_type => watched.class.name.underscore,
                             :object_id => watched},
                    :method => :post,
@@ -20,6 +20,6 @@
 <p><%= f.select :user_id, (watched.addable_watcher_users.collect {|m| [m.name, m.id]}), :prompt => true %>
 
 <%= submit_tag l(:button_add) %>
-<%= toggle_link l(:button_cancel), 'new-watcher-form'%></p>
+<%= toggle_link l(:button_cancel), 'new-watcher-form', :method => :get %></p>
 <% end %>
 <% end %>
