Fixed issues contextmenu test for multiple issues

--- a/app/views/issues/context_menu.rhtml
+++ b/app/views/issues/context_menu.rhtml
@@ -85,6 +85,6 @@
 
   <li><%= context_menu_link l(:button_move), move_project_issues_path(@project, :ids => @issues.collect(&:id)),
 	                        :class => 'icon-move', :disabled => !@can[:move]  %></li>
-  <li><%= context_menu_link l(:button_delete), project_issues_path(@project, :ids => @issues.collect(&:id)),
+  <li><%= context_menu_link l(:button_delete), bulk_destroy_project_issues_path(@project, :ids => @issues.collect(&:id)),
                             :method => :delete, :confirm => l(:text_issues_destroy_confirmation), :class => 'icon-del', :disabled => !@can[:delete] %></li>
 </ul>
