--- a/app/views/issues/context_menu.rhtml
+++ b/app/views/issues/context_menu.rhtml
@@ -1,6 +1,6 @@
 <ul>
 <% if !@issue.nil? -%>
-	<li><%= context_menu_link l(:button_edit), edit_project_issue_path(@project, @issue},
+	<li><%= context_menu_link l(:button_edit), edit_project_issue_path(@project, @issue),
 	        :class => 'icon-edit', :disabled => !@can[:edit] %></li>
 	<li class="folder">			
 		<a href="#" class="submenu" onclick="return false;"><%= l(:field_status) %></a>
