--- a/app/views/projects/_edit.rhtml
+++ b/app/views/projects/_edit.rhtml
@@ -1,4 +1,4 @@
-<% labelled_tabular_form_for :project, @project, :html => { :method => :put } do |f| %>
+<% labelled_tabular_form_for :project, @project, :url => {:action => 'show', :id => @project}, :html => { :method => :put } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
 <% end %>
