--- a/app/views/roles/edit.rhtml
+++ b/app/views/roles/edit.rhtml
@@ -1,6 +1,6 @@
 <h2><%=l(:label_role)%>: <%= @role.name %></h2> 
 
-<% labelled_tabular_form_for :role, @role, :url => { :action => 'edit' }, :html => {:id => 'role_form'} do |f| %>
+<% labelled_tabular_form_for :role, @role, :url => { :action => 'update' }, :html => {:id => 'role_form', :method => :put} do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
 <% end %>
