Safe JS functions use get now

--- a/app/views/issues/_form.rhtml
+++ b/app/views/issues/_form.rhtml
@@ -1,7 +1,8 @@
 <% if @issue.new_record? %>
 <p><%= f.select :tracker_id, @project.trackers.collect {|t| [t.name, t.id]}, :required => true %></p>
-<%= observe_field :issue_tracker_id, :url => issue_path(@project),
+<%= observe_field :issue_tracker_id, :url => { :action => :new },
                                      :update => :content,
+                                     :method => :get,
                                      :with => "Form.serialize('issue-form')" %>
 <hr />
 <% end %>
