--- a/app/views/issues/gantt.rhtml
+++ b/app/views/issues/gantt.rhtml
@@ -35,11 +35,13 @@
                    { :url => { :set_filter => (@query.new_record? ? 1 : nil) },
                      :update => "content",
                      :with => "Form.serialize('query_form')"
+                     :method => "get",
                    }, :class => 'icon icon-checked' %>
                    
 <%= link_to_remote l(:button_clear),
                    { :url => { :set_filter => (@query.new_record? ? 1 : nil) }, 
                      :update => "content",
+                     :method => "get",
                    }, :class => 'icon icon-reload' if @query.new_record? %>
 </p>
 <% end %>
