--- a/app/views/issues/index.rhtml
+++ b/app/views/issues/index.rhtml
@@ -10,12 +10,14 @@
     <%= link_to_remote l(:button_apply), 
                        { :url => { :set_filter => 1 },
                          :update => "content",
+                         :method => "get",
                          :with => "Form.serialize('query_form')"
                        }, :class => 'icon icon-checked' %>
                        
     <%= link_to_remote l(:button_clear),
                        { :url => { :set_filter => 1 }, 
                          :update => "content",
+                         :method => "get",
                        }, :class => 'icon icon-reload'  %>
                        
     <% if User.current.allowed_to?(:save_queries, @project, :global => true) %>
