--- a/app/views/search/index.rhtml
+++ b/app/views/search/index.rhtml
@@ -37,12 +37,14 @@
 <% if @pagination_previous_date %>
 <%= link_to_remote ('&#171; ' + l(:label_previous)),
                    {:update => :content,
+                    :method => "get",
                     :url => params.merge(:previous => 1, :offset => @pagination_previous_date.strftime("%Y%m%d%H%M%S"))
                    }, :href => url_for(params.merge(:previous => 1, :offset => @pagination_previous_date.strftime("%Y%m%d%H%M%S"))) %>&nbsp;
 <% end %>
 <% if @pagination_next_date %>
 <%= link_to_remote (l(:label_next) + ' &#187;'),
                    {:update => :content,
+                    :method => "get",
                     :url => params.merge(:previous => nil, :offset => @pagination_next_date.strftime("%Y%m%d%H%M%S"))
                    }, :href => url_for(params.merge(:previous => nil, :offset => @pagination_next_date.strftime("%Y%m%d%H%M%S"))) %>
 <% end %>
