--- a/app/views/timelog/details.rhtml
+++ b/app/views/timelog/details.rhtml
@@ -6,7 +6,7 @@
 
 <h2><%= l(:label_spent_time) %></h2>
 
-<% form_remote_tag( :url => {}, :method => :get, :update => 'content' ) do %>
+<% form_remote_tag( :url => {}, :method => :get, :update => 'content', :method => 'get' ) do %>
 <%= hidden_field_tag 'project_id', params[:project_id] %>
 <%= hidden_field_tag 'issue_id', params[:issue_id] if @issue %>
 <%= render :partial => 'date_range' %>
