--- a/app/views/issues/gantt.rhtml
+++ b/app/views/issues/gantt.rhtml
@@ -34,8 +34,8 @@
 <%= link_to_remote l(:button_apply), 
                    { :url => { :set_filter => (@query.new_record? ? 1 : nil) },
                      :update => "content",
-                     :with => "Form.serialize('query_form')"
-                     :method => "get",
+                     :with => "Form.serialize('query_form')",
+                     :method => "get"
                    }, :class => 'icon icon-checked' %>
                    
 <%= link_to_remote l(:button_clear),
