--- a/app/views/admin/index.rhtml
+++ b/app/views/admin/index.rhtml
@@ -31,7 +31,7 @@
 </p>
 
 <p class="icon22 icon22-settings">
-<%= link_to l(:label_settings), :controller => 'settings' %>
+<%= link_to l(:label_settings), :controller => 'settings', :action => 'show' %>
 </p>
 
 <p class="icon22 icon22-info">
