--- a/app/views/boards/show.rhtml
+++ b/app/views/boards/show.rhtml
@@ -1,20 +1,20 @@
-<%= breadcrumb link_to(l(:label_board_plural), project_boards_path(@project)) %>
+<%= breadcrumb link_to(l(:label_board_plural), {:controller => 'boards', :action => 'index', :project_id => @project}) %>
 
 <div class="contextual">
 <%= link_to_if_authorized l(:label_message_new),
-                          new_board_message_path(@board),
+                          {:controller => 'messages', :action => 'new', :board_id => @board},
                           :class => 'icon icon-add',
                           :onclick => 'Element.show("add-message"); return false;' %>
 <%= watcher_tag(@board, User.current) %>
 </div>
 
 <div id="add-message" style="display:none;">
-<h2><%= link_to h(@board.name), new_board_message_path(@board) %> &#187; <%= l(:label_message_new) %></h2>
-<% form_for :message, @message, :url => project_board_path(@project, @board), :html => {:multipart => true, :id => 'message-form'} do |f| %>
+<h2><%= link_to h(@board.name), {:controller => 'messages', :action => 'new', :project_id => @project, :id => @board} %> &#187; <%= l(:label_message_new) %></h2>
+<% form_for :message, @message, :url => {:controller => 'messages', :action => 'new', :board_id => @board}, :html => {:multipart => true, :id => 'message-form'} do |f| %>
   <%= render :partial => 'messages/form', :locals => {:f => f} %>
   <p><%= submit_tag l(:button_create) %>
   <%= link_to_remote l(:label_preview), 
-                     { :url => {:controller => :messages, :action => :preview, :board_id => @board.id},
+                     { :url => {:controller => :messages, :action => :preview, :board_id => @board},
                        :method => 'post',
                        :update => 'preview',
                        :with => "Form.serialize('message-form')",
@@ -39,7 +39,7 @@
   <tbody>
   <% @topics.each do |topic| %>
     <tr class="message <%= cycle 'odd', 'even' %> <%= topic.sticky? ? 'sticky' : '' %> <%= topic.locked? ? 'locked' : '' %>">
-      <td class="subject"><%= link_to h(topic.subject), board_message_path(@board, topic), :class => 'icon' %></td>
+      <td class="subject"><%= link_to h(topic.subject), { :controller => 'messages', :action => 'show', :board_id => @board, :id => topic }, :class => 'icon' %></td>
       <td class="author" align="center"><%= topic.author %></td>
       <td class="created_on" align="center"><%= format_time(topic.created_on) %></td>
       <td class="replies" align="center"><%= topic.replies_count %></td>
