--- a/app/views/messages/show.rhtml
+++ b/app/views/messages/show.rhtml
@@ -3,9 +3,9 @@
 
 <div class="contextual">
     <%= watcher_tag(@topic, User.current) %>
-    <%= link_to_remote_if_authorized l(:button_quote), { :url => {:action => 'quote', :id => @topic} }, :class => 'icon icon-comment' %>
-    <%= link_to_if_authorized l(:button_edit), {:action => 'edit', :id => @topic}, :class => 'icon icon-edit' %>
-    <%= link_to_if_authorized l(:button_delete), {:action => 'destroy', :id => @topic}, :method => :delete, :confirm => l(:text_are_you_sure), :class => 'icon icon-del' %>
+    <%= link_to_remote_if_authorized l(:button_quote), { :url => {:action => 'quote', :id => @topic, :board_id => @board} }, :class => 'icon icon-comment' %>
+    <%= link_to_if_authorized l(:button_edit), {:action => 'edit', :id => @topic, :board_id => @board}, :class => 'icon icon-edit' %>
+    <%= link_to_if_authorized l(:button_delete), {:action => 'destroy', :id => @topic, :board_id => @board}, :method => :delete, :confirm => l(:text_are_you_sure), :class => 'icon icon-del' %>
 </div>
 
 <h2><%=h @topic.subject %></h2>
@@ -24,7 +24,7 @@
 <% @replies.each do |message| %>
   <a name="<%= "message-#{message.id}" %>"></a>
   <div class="contextual">
-    <%= link_to_remote_if_authorized image_tag('comment.png'), { :url => {:action => 'quote', :id => message} }, :title => l(:button_quote) %>
+    <%= link_to_remote_if_authorized image_tag('comment.png'), { :url => {:action => 'quote', :id => message, :board_id => @board} }, :title => l(:button_quote) %>
     <%= link_to_if_authorized image_tag('edit.png'), {:action => 'edit', :id => message}, :title => l(:button_edit) %>
     <%= link_to_if_authorized image_tag('delete.png'), {:action => 'destroy', :id => message}, :method => :delete, :confirm => l(:text_are_you_sure), :title => l(:button_delete) %>
   </div>
