--- a/app/views/settings/_notifications.rhtml
+++ b/app/views/settings/_notifications.rhtml
@@ -1,5 +1,5 @@
 <% if @deliveries %>
-<% form_tag(settings_path(:tab => 'notifications'), :method => :put) do %>
+<% form_tag({:action => 'update', :tab => 'notifications'}, :method => :put) do %>
 
 <div class="box tabular settings">
 <p><label><%= l(:setting_mail_from) %></label>
