--- a/app/views/boards/show.rhtml
+++ b/app/views/boards/show.rhtml
@@ -9,7 +9,7 @@
 </div>
 
 <div id="add-message" style="display:none;">
-<h2><%= link_to h(@board.name), {:controller => 'messages', :action => 'new', :project_id => @project, :id => @board} %> &#187; <%= l(:label_message_new) %></h2>
+<h2><%= link_to h(@board.name), {:controller => 'messages', :action => 'new', :board_id => @board} %> &#187; <%= l(:label_message_new) %></h2>
 <% form_for :message, @message, :url => {:controller => 'messages', :action => 'new', :board_id => @board}, :html => {:multipart => true, :id => 'message-form'} do |f| %>
   <%= render :partial => 'messages/form', :locals => {:f => f} %>
   <p><%= submit_tag l(:button_create) %>
