--- a/app/views/custom_fields/list.rhtml
+++ b/app/views/custom_fields/list.rhtml
@@ -44,7 +44,7 @@
         <%= link_to image_tag('2downarrow.png', :alt => l(:label_sort_lowest)), {:action => 'move', :id => custom_field, :position => 'lowest'}, :method => :post, :title => l(:label_sort_lowest) %>
     </td>
 	<td align="center">
-	   <%= button_to l(:button_delete), { :action => 'destroy', :id => custom_field }, :confirm => l(:text_are_you_sure), :class => "button-small" %>
+	   <%= button_to l(:button_delete), { :action => 'destroy', :id => custom_field }, :method => :delete, :confirm => l(:text_are_you_sure), :class => "button-small" %>
     </td>
   </tr>
 <% end; reset_cycle %>
