--- a/app/views/projects/settings/_boards.rhtml
+++ b/app/views/projects/settings/_boards.rhtml
@@ -9,14 +9,14 @@
     <td><%=h board.description %></td>
     <td align="center">
     <% if authorize_for("boards", "edit") %>
-    <%= link_to image_tag('2uparrow.png', :alt => l(:label_sort_highest)), project_board_path(@project, board, :position => 'highest'), :method => :put, :title => l(:label_sort_highest) %>
-    <%= link_to image_tag('1uparrow.png', :alt => l(:label_sort_higher)), project_board_path(@project, board, :position => 'higher'), :method => :put, :title => l(:label_sort_higher) %> -
-    <%= link_to image_tag('1downarrow.png', :alt => l(:label_sort_lower)), project_board_path(@project, board, :position => 'lower'), :method => :put, :title => l(:label_sort_lower) %>
-    <%= link_to image_tag('2downarrow.png', :alt => l(:label_sort_lowest)), project_board_path(@project, board, :position => 'lowest'), :method => :put, :title => l(:label_sort_lowest) %>
+    <%= link_to image_tag('2uparrow.png', :alt => l(:label_sort_highest)), {:controller => 'boards', :action => 'update', :project_id => @project, :id => board, :position => 'highest'}, :method => :post, :title => l(:label_sort_highest) %>
+    <%= link_to image_tag('1uparrow.png', :alt => l(:label_sort_higher)), {:controller => 'boards', :action => 'update', :project_id => @project, :id => board, :position => 'higher'}, :method => :post, :title => l(:label_sort_higher) %> -
+    <%= link_to image_tag('1downarrow.png', :alt => l(:label_sort_lower)), {:controller => 'boards', :action => 'update', :project_id => @project, :id => board, :position => 'lower'}, :method => :post, :title => l(:label_sort_lower) %>
+    <%= link_to image_tag('2downarrow.png', :alt => l(:label_sort_lowest)), {:controller => 'boards', :action => 'update', :project_id => @project, :id => board, :position => 'lowest'}, :method => :post, :title => l(:label_sort_lowest) %>
     <% end %>
     </td>    
-    <td align="center"><%= link_to_if_authorized l(:button_edit), {:controller => 'boards', :action => 'edit', :project_id => @project}, :class => 'icon icon-edit' %></td>
-    <td align="center"><%= link_to_if_authorized l(:button_delete), {:controller => 'boards', :action => 'destroy', :project_id => @project}, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %></td>
+    <td align="center"><%= link_to_if_authorized l(:button_edit), {:controller => 'boards', :action => 'edit', :project_id => @project, :id => board}, :class => 'icon icon-edit' %></td>
+    <td align="center"><%= link_to_if_authorized l(:button_delete), {:controller => 'boards', :action => 'destroy', :project_id => @project, :id => board}, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %></td>
 	</tr>
 <% end %>
     </tbody>
