--- a/app/views/boards/new.rhtml
+++ b/app/views/boards/new.rhtml
@@ -1,6 +1,6 @@
 <h2><%= l(:label_board_new) %></h2>
 
-<% labelled_tabular_form_for :board, @board, project_board_path(@project) do |f| %>
+<% labelled_tabular_form_for :board, @board, :url => {:action => 'create'} do |f| %>
   <%= render :partial => 'form', :locals => {:f => f} %>
   <%= submit_tag l(:button_create) %>
 <% end %>
