--- a/app/views/documents/edit.rhtml
+++ b/app/views/documents/edit.rhtml
@@ -1,6 +1,6 @@
 <h2><%=l(:label_document)%></h2>
 
-<% form_tag(project_document_path(@project, @document), :method => :put, :class => "tabular") do %>
+<% form_tag({:action => 'update', :id => @document}, :method => :put, :class => "tabular") do %>
   <%= render :partial => 'form' %>
   <%= submit_tag l(:button_save) %>
 <% end %>
