--- a/app/views/issues/new.rhtml
+++ b/app/views/issues/new.rhtml
@@ -8,7 +8,7 @@
     </div>
     <%= submit_tag l(:button_create) %>
     <%= link_to_remote l(:label_preview), 
-                       { :url => preview_new_project_issue_path(@project),
+                       { :url => { :controller => 'issues', :action => 'preview', :project_id => @project },
                          :method => 'post',
                          :update => 'preview',
                          :with => "Form.serialize('issue-form')",
