--- a/app/views/issue_statuses/list.rhtml
+++ b/app/views/issue_statuses/list.rhtml
@@ -25,7 +25,7 @@
     <%= link_to image_tag('2downarrow.png', :alt => l(:label_sort_lowest)), {:action => 'move', :id => status, :position => 'lowest'}, :method => :post, :title => l(:label_sort_lowest) %>
   </td>
   <td align="center" style="width:10%;">
-    <%= button_to l(:button_delete), issue_status_path(status), :method => :delete, :confirm => l(:text_are_you_sure), :class => "button-small" %>
+    <%= button_to l(:button_delete), { :action => 'destroy', :id => status }, :method => :delete, :confirm => l(:text_are_you_sure), :class => "button-small" %>
   </td>
   </tr>
 <% end %>
