--- a/app/views/users/add.rhtml
+++ b/app/views/users/add.rhtml
@@ -1,6 +1,6 @@
 <h2><%=l(:label_user_new)%></h2>
 
-<% labelled_tabular_form_for :user, @user, :url => users_path do |f| %>
+<% labelled_tabular_form_for :user, @user, { :action => "add" } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_create) %>
 <%= check_box_tag 'send_information', 1, true %> <%= l(:label_send_information) %>
