--- a/app/views/queries/edit.rhtml
+++ b/app/views/queries/edit.rhtml
@@ -1,6 +1,6 @@
 <h2><%= l(:label_query) %></h2>
 
-<% form_tag(project_query_path(@project, @query), :method => :put, :onsubmit => 'selectAllOptions("selected_columns");') do %>
+<% form_tag({:action => 'update', :id => @query}, :method => :put, :onsubmit => 'selectAllOptions("selected_columns");') do %>
   <%= render :partial => 'form', :locals => {:query => @query} %>
   <%= submit_tag l(:button_save) %>
 <% end %>
