--- a/app/views/settings/_authentication.rhtml
+++ b/app/views/settings/_authentication.rhtml
@@ -1,4 +1,4 @@
-<% form_tag(settings_path(:tab => 'authentication'), :method => :put) do %>
+<% form_tag({:action => 'edit', :tab => 'authentication'}, :method => :put) do %>
 
 <div class="box tabular settings">
 <p><label><%= l(:setting_login_required) %></label>
