--- a/app/views/settings/_general.rhtml
+++ b/app/views/settings/_general.rhtml
@@ -1,4 +1,4 @@
-<% form_tag(settings_path, :method => :put) do %>
+<% form_tag({:action => 'edit'}, :method => :put) do %>
 
 <div class="box tabular settings">
 <p><label><%= l(:setting_app_title) %></label>
