--- a/app/views/settings/_repositories.rhtml
+++ b/app/views/settings/_repositories.rhtml
@@ -1,4 +1,4 @@
-<% form_tag(settings_path(:tab => 'repositories'), :method => :put) do %>
+<% form_tag({:action => 'edit', :tab => 'repositories'}, :method => :put) do %>
 
 <div class="box tabular settings">
 <p><label><%= l(:setting_autofetch_changesets) %></label>
