--- a/app/views/trackers/new.rhtml
+++ b/app/views/trackers/new.rhtml
@@ -1,6 +1,6 @@
 <h2><%=l(:label_tracker_new)%></h2>
 
-<% labelled_tabular_form_for :tracker, @tracker, :url => trackers_path do |f| %>
+<% labelled_tabular_form_for :tracker, @tracker, :url => { :action => 'create' } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_create) %>
 <% end %>
