--- a/app/views/wiki/special_date_index.rhtml
+++ b/app/views/wiki/special_date_index.rhtml
@@ -8,7 +8,7 @@
 <h3><%= format_date(date) %></h3>
 <ul>
 <% @pages_by_date[date].each do |page| %>
-    <li><%= link_to page.pretty_title, :action => 'index', :page => page.title %></li>
+    <li><%= link_to page.pretty_title, :action => 'show', :id => page.title %></li>
 <% end %>
 </ul>
 <% end %>
